# QA-Extract

./: README.md  chat_from_text.py  judge_prompt.txt  judge_qa_llm.py  prompt.txt  pyproject.toml  qa_pairs_english_llm_judged.json  test.txt  test_parse_qa.py
gen_qa/: CONVENTIONS.md  chunk_english_papers.py  generate_qa_llm.py  promptv1.txt  vllm_client.py
gen_qa/qa/: promptv1.txt  (+1 more)
output/: abstracts_english_llm.json  chunks_english.json  md_header_splits.json  md_header_splits_en.json  md_header_splits_zh.json  qa_pairs_english_llm.json  qa_pairs_english_llm_test.json  中文论文.json  中文论文_llm.json  中文论文_res.json  英文专利.json  英文专利_llm.json  英文专利_res.json  英文论文.json  英文论文_llm.json  英文论文_res.json
中文论文/: 不同药剂对根肿菌休眠孢子毒力效果测定及防病应用研究_王鹏远.md  东台地区设施蔬菜主要害虫发生动态及三叶斑潜蝇的防治技术研究_缪春蕾.md  丹尼斯凤梨根茎腐烂病病原菌鉴定与药剂筛选_张海鹏.md  二溴海因水基制剂研制_徐丽君.md  功夫菊酯和吡唑醚菌酯纳米载药系统构建与表征_王春鑫.md  柑橘溃疡病防治的药剂筛选试验_李孜.md  滴灌施用氟吡菌酰胺防治茄子根结线虫的初步研究_李今朝.md  稻腾对水稻二化螟、稻纵卷叶螟和大螟的防治效果研究_王琪.md  表面活性剂和增稠剂对悬浮种衣剂贮存物理稳定性的影响_刘鹏飞.md  超细硫铝酸盐水泥基注浆材料的应用研究_蔡兵团.md  除草剂环酯草醚的合成及其水分散粒剂的研究_苗丽.md  非离子阴离子表面活性剂的制备及应用_关策.md
英文专利/: (1,4,5-TRISUBSTITUTED 1H-PYRAZOL-3-YL)OXY-2-ALKYLTHIOALKYL ACIDS AND -ALKYL ACID DERIVATIVES, SALTS THEREOF AND USE THEREOF AS ACTIVE HERBICIDAL INGRE.md  (1,4,5-TRISUBSTITUTED-1H-PYRAZOL-3-YL)OXY-2-ALKOXY ALKYL ACIDS AND THEIR DERIVATIVES, THEIR SALTS AND THEIR USE AS HERBICIDAL AGENTS.md  (HETERO) ARYLACRYLAMIDES FOR THE CONTROL OF ECTOPARASITES.md  (HETERO)ARYL SULFONAMIDE COMPOUND AND FORMULATION FOR CONTROLLING HARMFUL ORGANISMS.md  (HETERO)ARYLAMIDE COMPOUND AND PEST CONTROL AGENT.md  (THI)OXAZOLINE PESTICIDES.md  (+3 more)
(+14 files in other folders)
