[project]
name = "qa-extract"
version = "0.1.0"
description = ""
authors = [
    {name = "cong",email = "cong0226@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-text-splitters>=1.1.0",
    "matplotlib>=3.10.8",
    "openai>=2.11.0",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
package = false
